--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     border-right: 2px solid black;
     position: absolute;
     border-radius: 50% 80% 80% 80% / 50% 90% 90% 80%;    
+    transform: rotate(-10deg);
 }
 
 .ear{
@@ -120,4 +121,20 @@ body{
     width: 200px;
     height: 30px;
     position: absolute;
+    right: 100px;
+    top: -15px;
+    border-radius: 20% 20% 40% 30%/ 20% 20% 20% 50%;
+}
+
+.hair-down{
+    content: "";
+    background: #000;
+    border: solid 2px #000;
+    width: 200px;
+    height: 30px;
+    position: absolute;
+    right: 100px;
+    left: -100px;
+    border-radius: 20% 20% 40% 30%/ 20% 20% 20% 50%; 
+    transform: rotate(-20deg);
 }
