--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body{
 }
 .hair-up{
     content: "";
+    z-index: 1;
     background: #000;
     border: solid 2px #000;
     width: 200px;
@@ -123,18 +124,20 @@ body{
     position: absolute;
     right: 100px;
     top: -15px;
-    border-radius: 20% 20% 40% 30%/ 20% 20% 20% 50%;
+    border-radius:20%;
 }
 
 .hair-down{
     content: "";
     background: #000;
     border: solid 2px #000;
-    width: 200px;
-    height: 30px;
+    width: 150px;
+    height: 100px;
     position: absolute;
     right: 100px;
-    left: -100px;
-    border-radius: 20% 20% 40% 30%/ 20% 20% 20% 50%; 
-    transform: rotate(-20deg);
+    left: -30px;
+    border-radius: 50%; 
+    transform: rotate(-50deg);
+    z-index: -1;
 }
+
