--- a/style.css
+++ b/style.css
@@ -62,7 +62,12 @@ body{
     border: 2px solid black;
     background: #A54253;
     border-radius: 50%;
+    animation: openmouth 1s infinite;
 }
+
+
+
+/*Left Eye */
 
 
 .eye{
@@ -77,7 +82,7 @@ body{
     position: absolute;
 }
 
-/*Left Eye */
+/*Inner Eye white*/
 .eye::before{
     content: "";
     position: absolute;
@@ -89,8 +94,16 @@ body{
     left: 50px;
     right: -10px;
     border-radius: 50%;
+    transition: 2s  ease-in-out;
+    animation: eyeball-bounce 4s infinite;
 }
 
+/*Boune animaiton to lok up and down*/
+
+@keyframes eyeball-bounce {
+    50% {top: -1px;}
+    100%{bottom: 1px}
+}
 .right-eye{
     background: #000;
     width: 100px;
@@ -102,6 +115,8 @@ body{
     position: absolute;
     z-index: 0;
 }
+
+/*Innner Eye white */
 .right-eye::after{
     content: "";
     position: absolute;
@@ -114,6 +129,7 @@ body{
     right: -10px;
     border-radius: 50%;
     z-index: 1;
+    animation: eyeball-bounce 4s infinite;
 }
 .hair-up{
     content: "";
@@ -151,6 +167,7 @@ body{
     rotate: -50deg;
     top: 5px;
     border-radius: 20%;
+    
 }
 
 .horn-left::after{
