--- a/style.css
+++ b/style.css
@@ -22,6 +22,22 @@ body{
     border-bottom: 4px solid #000;
     border-radius: 40% 60% 60% 80% / 40% 60% 60% 80%;
     box-shadow: 0px 0px 50px #000;
+    animation: shakehead 2s infinite ease-in-out;
+}
+
+@keyframes shakehead {
+    0% {
+        /* Start position (10 degrees right) */
+        transform: rotate(2deg); 
+    }
+    50% {
+        /* Mid position (-20 degrees left) */
+        transform: rotate(-2deg); 
+    }
+    100% {
+        /* End position, returning to the start for a smooth loop */
+        transform: rotate(2deg); 
+    }
 }
 .face::after{
     width: 190px;
@@ -62,9 +78,22 @@ body{
     border: 2px solid black;
     background: #A54253;
     border-radius: 50%;
-    animation: openmouth 1s infinite;
+    animation: openmouth 2s infinite ease-in-out;
 }
 
+/*Animation for mouth */
+/* Animation for mouth */
+@keyframes openmouth {
+    0% {
+        transform: scale(1);     
+    }
+    50% {
+        transform: scale(1.1);   
+    }
+    100% {
+        transform: scale(1);     
+    }
+}
 
 
 /*Left Eye */
@@ -155,7 +184,7 @@ body{
     left: -30px;
     border-radius: 50%; 
     transform: rotate(-50deg);
-    z-index: -1;
+    z-index: -2;
 }
 
 .horn-left{
