--- a/style.css
+++ b/style.css
@@ -24,3 +24,57 @@ body {
     align-items: center;
     position: relative;
 }
+
+/*
+============= 
+Head styling 
+=============
+*/
+
+.head {
+    width: 260px;
+    height: 260px;
+    background: #FFB88E;
+    border-radius: 40% 60% 60% 80% / 40% 60% 60% 80%;
+    border: 4px solid #000;
+    position: relative;
+}
+
+/*KofiS LEFT EAR using Psudeo element */
+
+
+.head::before {
+    content: '';
+    width: 65px;
+    height: 85px;
+    background: #FFB88E;
+
+    /*Border coloring */
+    border-top: 2px solid #000;
+    border-left: 2px solid #000;
+    border-bottom: 2px solid #000;
+    position: absolute;
+    transform: translate(-60px, 100px) rotate(-10deg);
+    
+
+    /*Special styling of the border raduis to look more like an ear*/
+    border-radius: 50% 10% 40% 40% / 50% 10% 20% 90%;
+}
+
+
+/*KOFIS SIDE CHEECK */
+
+.head::after {
+    content: '';
+    width: 150px;
+    height: 160px;
+
+    background: #FFB88E;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+    position: absolute;
+    transform: translate(146px, 100px);
+    border-radius: 0% 70% 80% 40%;
+}
+
+
