--- a/style.css
+++ b/style.css
@@ -270,12 +270,12 @@ MOUTH OF KOFI
 .mouth {
    background: #A54253;
    width: 35px;
-   height: 45px;
+   height: 50px;
    position: absolute;
    bottom: -20px;
    left: 130px;
    z-index: 1;
-   border-radius: 50px;
+   border-radius: 50%;
    border: 2px solid #000;
 }
 
